[gd_scene load_steps=9 format=3 uid="uid://bw66n55p0655k"]

[ext_resource type="Script" uid="uid://djh8wx3uk2sbt" path="res://ui/player_hud.gd" id="1_fa7lo"]
[ext_resource type="PackedScene" path="res://ui/fps_counter.tscn" id="2_awr13"]
[ext_resource type="Texture2D" uid="uid://duosndst2e6pc" path="res://assets/textures/tiny_crosshair.png" id="2_w5gje"]
[ext_resource type="Script" path="res://ui/ping_counter.gd" id="3_18snh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia7ii"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.588235)
corner_radius_top_right = 1024
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34p4x"]
bg_color = Color(0.626918, 0.234689, 0.205007, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld6el"]
bg_color = Color(0.559921, 0.622412, 0.540833, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwt62"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.588235)
corner_radius_bottom_left = 1024
corner_detail = 1

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fa7lo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "[C] Switch View
[Alt+Enter] Fullscreen
[V] Noclip
[Esc] Menu
"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ia7ii")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="StatsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/StatsContainer"]
layout_mode = 2
text = "SPD: "

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/StatsContainer"]
layout_mode = 2
text = "speed"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/StatsContainer"]
layout_mode = 2
text = "m/s"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_34p4x")
value = 100.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_ld6el")
value = 100.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwt62")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="FpsCounter" parent="MarginContainer/VBoxContainer2/HBoxContainer/PanelContainer/MarginContainer" instance=ExtResource("2_awr13")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwt62")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PingCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 2
script = ExtResource("3_18snh")

[node name="PingLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2/PanelContainer/MarginContainer/PingCounter"]
layout_mode = 2
text = "[ping]"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2/PanelContainer/MarginContainer/PingCounter"]
layout_mode = 2
text = "ms ping"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CrosshairDot" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_w5gje")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="InteractText" type="Label" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "interact text"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="InventorySlots" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="VSeparator" type="VSeparator" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
